# VisionSteamworks2017

./: .clang-format  CMakeLists.txt
algorithms/: Steamworks  Steamworks2017_Gear.grip  Steamworks2017_Shooter.grip  Stronghold  Stronghold.grip
include/: CameraThread.h  Config.h  GearGripPipeline.h  GearPipelineThread.h  GripPipeline.h  NetworkThread.h  PipelineThread.h  ShooterGripPipeline.h  ShooterPipelineThread.h  WQueue.h
old/: main_old.cpp
src/: GearGripPipeline.cpp  GripPipeline.cpp  ShooterGripPipeline.cpp  main.cpp
